--- a/index.html
+++ b/index.html
@@ -6,14 +6,24 @@
 </head>
 <body>
 	<div data-calculator>
-		<div data-page-name="page">
+		<form id="page" data-page-name="page" data-navigate-to="page2">
 			<input type="text" name="x" data-storagable="x">
+			+
 			<input type="text" name="y" data-storagable="y">
-			<button id="calculate">Рассчитать</button>
-			<div id="compute" data-computable="{{x}} + 2*{{y}}"></div>
-		</div>
+			<div id="sum" data-computable="{{x}} + sin({{y}})"></div>
+			<input type="submit" value="Далее">
+		</form>
+		<form id="page2" data-page-name="page2">
+			<input type="text" name="x2" data-storagable="x2">
+			-
+			<input type="text" name="y2" data-storagable="y2">
+			<div id="substraction" data-computable="{{x2}} - {{y2}}"></div>
+			<button data-navigate-to="page3">Еще</button>
+			<div data-page-name="page3">
+				<p>Рассчеты окончены</p>
+			</div>
+		</form>
 	</div>
-
 	<script src="main.js"></script>
 </body>
 </html>
